Refactor UtxoProcessor to handle transactions without collateral return
Added support for processing transactions without collateral return in UtxoProcessor. Refactored tests to update the handling of spent and unspent UTXOs, including new test cases for scenarios with no collateral return.